# aether

./: .env.example  .gitignore  .pr_agent.toml  CLAUDE.md  Dockerfile  Dockerfile.edge  Dockerfile.flight  Dockerfile.gps  Dockerfile.sensor  Dockerfile.vision  Makefile  README.md  compose.yaml  config.py  pyproject.toml  requirements.txt  setup.md  socket.cpp
.github/workflows/: ai-review.yml  claude-review.yml  claude-security-review.yml
gps/: gps  main.cpp
install/: local_setup.sh  setup.sh
install/gps_node/lib/gps_node/: gps_node
install/gps_node/share/gps_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gps_node/share/gps_node/cmake/: gps_nodeConfig.cmake
log/: latest_build
scripts/: build-containers.sh  deploy-service.sh
src/autonomy_node/: CMakeLists.txt
src/autonomy_node/src/: autonomy_node.cpp
src/common/: package.xml  setup.py
src/common/common/: __init__.py  commands.py  constants.py  events.py  publishers.py  types.py
src/edge_node/: package.xml  setup.cfg  setup.py
src/edge_node/edge_node/: __init__.py  edge_node.py  node.py  services.py  types.py
src/edge_node/resource/: edge_node.py
src/flight_node/: package.xml  setup.cfg  setup.py
src/flight_node/flight_node/: __init__.py  events.py  flight_node.py  node.py  services.py  telemetry.py  types.py
src/flight_node/flight_node/adapters/: __init__.py  mavlink.py  typing.py
src/gps_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/gps_node/gps_node/: gps_node.py
src/gps_node/resource/: gps_node.py
src/gps_node/src/: gps_node.cpp
src/sensor_node/: package.xml  requirements.txt  setup.cfg  setup.py
src/sensor_node/sensor_node/: __init__.py  node.py  sensor_node.py  services.py
src/sensor_node/sensor_node/adapters/: __init__.py  dht11.py
src/vision_node/: package.xml  setup.cfg  setup.py
src/vision_node/vision_node/: __init__.py  node.py  services.py  vision_node.py
src/vision_node/vision_node/adapters/: __init__.py  vision.py
systemd/: aether.service
