<?xml version="1.0"?>
<package format="3">
  <name>common</name>
  <version>0.0.1</version>
  <description>Shared Python helpers for Aether ROS nodes</description>
  <maintainer email="admin@ek-labs.com">EK LABS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
