<?xml version="1.0"?>
<package format="3">
  <name>gps_node</name>
  <version>0.0.1</version>
  <description>GPS parser node for aether drone</description>
  <maintainer email="admin@ek-labs.com">EK Labs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>